--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.2",
     "cnpm": "^8.2.0",
     "core-js": "^3.4.3",
+    "element-ui": "^2.15.9",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
