--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cnpm": "^8.2.0",
     "core-js": "^3.4.3",
     "element-ui": "^2.15.9",
+    "lodash": "^4.17.21",
     "view-design": "^4.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6",
